# wasmedge-proxy

./: Cargo.toml  Containerfile
src/: main.rs
